--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,14 +2,68 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Домашняя страница</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #007bff;
+            transition: color 0.2s;
+        }
+        a:hover {
+            color: #0056b3;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-<h1>Добро пожаловать в приложение по управлению проектами!</h1>
-<p>
-    <a th:href="@{/api/users}">Список пользователей и проекты</a>
-</p>
-<p>
-    <a th:href="@{/api/users-projects/add}">Добавить пользователя в проект</a>
-</p>
+<div class="container">
+    <h1>Добро пожаловать в приложение по управлению проектами!</h1>
+    <p>
+        <a th:href="@{/users}">Список пользователей</a>
+    </p>
+    <p>
+        <a th:href="@{/projects}">Список проектов</a>
+    </p>
+    <p>
+        <a th:href="@{/addUser}">Добавить пользователя</a>
+    </p>
+    <p>
+        <a th:href="@{/addProject}">Добавить проект</a>
+    </p>
+    <p>
+        <a th:href="@{/api/users/projects/add}">Добавить пользователя в проект</a>
+    </p>
+    <p th:if="${project != null}">
+        <a th:href="@{/projects/{id}/users(id=${project.id})}">Показать пользователей проекта</a>
+    </p>
+
+    <p th:if="${user != null}">
+        <a th:href="@{/users/{id}/projects(id=${user.id})}">Показать проекты пользователя</a>
+    </p>
+    <p>
+        <a th:href="@{/api/users/delete}">Удалить пользователя</a>
+    </p>
+    <p>
+        <a th:href="@{/api/projects/delete}">Удалить проект</a>
+    </p>
+</div>
 </body>
 </html>
