--- a/src/main/resources/templates/addUserToProject.html
+++ b/src/main/resources/templates/addUserToProject.html
@@ -5,14 +5,19 @@
 </head>
 <body>
 <h1>Добавить пользователя в проект</h1>
-<form action="#" th:action="@{/api/users-projects/add}" method="post">
-    <label for="userId">ID пользователя:</label>
-    <input type="text" id="userId" name="userId" required>
-    <br>
-    <label for="projectId">ID проекта:</label>
-    <input type="text" id="projectId" name="projectId" required>
-    <br>
-    <button type="submit">Добавить пользователя в проект</button>
+<form th:action="@{/api/users/projects/add}" method="post">
+    <label for="userId">Выберите пользователя:</label>
+    <select id="userId" name="userId" required>
+        <option th:each="user : ${users}" th:value="${user.id}" th:text="${user.username}"></option>
+    </select>
+
+    <label for="projectId">Выберите проект:</label>
+    <select id="projectId" name="projectId" required>
+        <option th:each="project : ${projects}" th:value="${project.id}" th:text="${project.name}"></option>
+    </select>
+
+    <button type="submit">Добавить</button>
 </form>
+<p><a th:href="@{/}">Вернуться на главную</a></p>
 </body>
 </html>
